# macrodash-nbb

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Home.py
data/raw/: chomage.csv  euribor_3m.csv  inflation.csv  olo_10y.csv  pib.csv  prix_immo.csv
docs/: JOUR1_DOCUMENTATION.md  PROJET_DOCUMENTATION.md
notebooks/: 01_exploration.ipynb
src/: config.py  fetch_eurostat.py  persist.py  transform.py
