[project]
name = "macrodash-nbb"
version = "0.1.0"
description = "Belgian macroeconomic dashboard — Eurostat API + Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "plotly>=5.18",
    "streamlit>=1.30",
    "duckdb>=0.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
